Fix one time place activity not showing bug

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -471,7 +471,7 @@ color:#a0a0a0;
 
 .panel-meeting .panel-heading{
   border-bottom:1px solid #ddd;
-  background-color: #fafafa;
+  background-color: #f2f2f2;
 }
 .panel-meeting .panel-body{
 
